PLANET-5368: Fix H3/H4 font sizes on mobile
Ref: https://jira.greenpeace.org/browse/PLANET-5368

--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -87,11 +87,19 @@ h3 {
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: $font-size-md;
+
+  @include medium-and-up {
+    font-size: $font-size-lg;
+  }
 }
 
 h5 {
-  font-size: $font-size-md;
+  font-size: $font-size-sm;
+
+  @include medium-and-up {
+    font-size: $font-size-md;
+  }
 }
 
 h6 {
